Enabled chiscale and optimizer arguments for light-curve modeling.

*****

Implemented sigrej at the begining of pup_model.setup().
Need to think what to do if the data veries significantly from stat to
end, messing up the sigma rejection (do piecewise?, what's a good
recipe for this).
Also could do a sigrej from the residuals, after an initial fit
(consider if fit fails, it may mess up things as well).


*****  Sun Apr  8 20:01:23 CEST 2018  *****

Implemented newparams() and saveparams() in puppies.tool submodule.
This let's the user create a new modelparams file with default values
and to update an existing file with values from a Fit() object,
respectively.

*****

Minor corrections in _quadramp.c, _mandeltr.c, and _mandelecl.c
light-curve models.

*****

Updated fit() in pup_model.py to return the Model() object and store
best-fitting values into modelparams file(s).
Added update argument in evalmdel to update the models' parameters.


*****  Di 17. Apr 16:27:31 CEST 2018  *****

Combined all ramp models into ramps.py, where the specific models
inherit from the Ramp() superclass.
Files need to be properly documented.

*****

Updated bliss and ramp light-curve classes, renamed the pup argument
to obj in the settup() method.

*****

Added eclipse submodule, which implements mandelecl() and eclipse()
light-curve models.

*****

Adapted puppies.models' init to new ramps.py file and eclipse module.  
Removed mandelecl.py file (replaced with eclipse submodule).

*****

Updated Makefile to include submodules
and make it less verbose.

*****

Adapted pup_model.py to latest changes in puppies.models.


*****  Sun May 27 22:57:36 CEST 2018  *****

Renamed pup.model.fit() to lcfit() to avoid variable name conflict.
Added SDR and BIC calculations to laika object during lcfit().
For multiple model fits per pup requesting chiscale, scale according
to fit with lowest SDR.


*****  Mon Jun 11 01:06:49 CEST 2018  *****

Updated MC3 submodule.

*****

